# dropout_project

./: Problem statement and Scope of work.docx  cookiecutter.ipynb  sprint3.ipynb
dropout_project/: Makefile  README.md  pyproject.toml  requirements.txt
dropout_project/docs/: mkdocs.yml
dropout_project/docs/docs/: index.md
dropout_project/dropout_project/: __init__.py  dataset.py  features.py  plots.py  predict_dropout.ipynb  sprint3.ipynb  sprint_2_and_3.ipynb
dropout_project/dropout_project/modeling/: predict.py  sprint2.ipynb  train.py
dropout_project/notebook/: predict_dropout.ipynb
dropout_project/src/: data_preprocessing.py  evaluation.py  feature_engineering.py  model_training.py  utils.py
