[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dropout_project"
version = "0.0.1"
description = "Predicting students in dropout risk."
authors = [
  { name = "Marcelo Soriano" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["dropout_project"]
include = ["pyproject.toml", "dropout_project/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["dropout_project"]
force-sort-within-sections = true

